Add html content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Listify</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Listify</h1>
+        <div>by Cooper Williams</div>
+    </div>
+    <div class="main">
+        <h1>Enter a sentence</h1>
+        <button>Process</button>
+    </div>
+    <div class="words">
+        <div class="number-words">Number Words:</div>
+        <div class="non-number-words">Non-Number Words:</div>
+    </div>
 </body>
 </html>
