Link css and script and add flexbox structure

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listify</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="header">
-        <h1>Listify</h1>
-        <div>by Cooper Williams</div>
-    </div>
-    <div class="main">
-        <h1>Enter a sentence</h1>
-        <button>Process</button>
-    </div>
-    <div class="words">
-        <div class="number-words">Number Words:</div>
-        <div class="non-number-words">Non-Number Words:</div>
+    <div class="container">
+        <div class="header">
+            <h1>Listify</h1>
+            <div>by Cooper Williams</div>
+        </div>
+        <div class="main">
+            <h1>Enter a sentence</h1>
+            <button>Process</button>
+        </div>
+        <div class="words">
+            <div class="number-words">Number Words:</div>
+            <div class="non-number-words">Non-Number Words:</div>
+        </div>
     </div>
 </body>
 </html>
