Add <li> tags to the word lists

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
             <button>Process</button>
         </div>
         <div class="words">
-            <div class="number-words">Number Words:</div>
-            <div class="non-number-words">Non-Number Words:</div>
+            <div class="number-words">Number Words:
+                <li class="number-list"></li>
+            </div>
+            <div class="non-number-words">Non-Number Words:
+                <li class="non-number-list"></li>
+            </div>
         </div>
     </div>
 </body>
