--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="words">
             <div class="number-words">Number Words:
-                <li class="number-list"></li>
+                <ul class="number-list"></ul>
             </div>
             <div class="non-number-words">Non-Number Words:
-                <li class="non-number-list"></li>
+                <ul class="non-number-list"></ul>
             </div>
         </div>
     </div>
