Add text box for input

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div class="main">
             <h2>Enter a sentence</h2>
+            <input type="text" id="sentence" placeholder="Enter a sentence...">
             <button>Process</button>
         </div>
         <div class="words">
