--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div>by Cooper Williams</div>
         </div>
         <div class="main">
-            <h2>Enter a sentence</h2>
-            <input type="text" id="sentence" placeholder="Enter a sentence...">
+            <h2>Enter a sentence:</h2>
+            <input type="text" id="sentence"><br>
             <button>Process</button>
         </div>
         <div class="words">
