Fix alignment of main section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main">
             <h2>Enter a sentence:</h2>
             <input type="text" id="sentence"><br>
-            <button>Process</button>
+            <button id="process">Process</button>
         </div>
         <div class="words">
             <div class="number-words">Number Words:
